# describe-image

./: README.md  main.py  pyproject.toml
configs/: config.yml  log_config.yml
logs/: log.jsonl  log.jsonl.1
