[tool.poetry]
name = "describe-image"
version = "0.1.0"
description = ""
authors = ["gogsUser <gogs@gogs.gogs>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.39.3"
timm = "^0.9.16"
einops = "^0.7.0"
torch = {url = "https://download.pytorch.org/whl/cu118/torch-2.1.0%2Bcu118-cp310-cp310-linux_x86_64.whl"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
